manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cbull-dev
  name: cbull-dev
  labels:
    app: cbull-dev
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: cbull-dev
  template:
    metadata:
      labels:
        app: cbull-dev
    spec:
      containers:
        - name: cbull-dev
          image: csbull55/cbull-dev:main-c8952397b84f876022d6c6785537cba8ad0ab18a
