manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cbull-dev
  namespace: cbull-dev
  labels:
    app: cbull-dev
  annotations:
    acme.cert-manager.io/http01-ingress-class: external
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: external
  rules:
    - host: cbull.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cbull-dev
                port:
                  number: 80
  tls:
    - hosts:
      - cbull.dev
      secretName: cbull-dev-acme-certificate
